k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: miamo
  labels:
    app: miamo
    app.kubernetes.io/name: miamo
